Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-272

logcat and logstats segfault

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.1.0, 2.0.0a
    • 2.0.0
    • Logging
    • None

    Description

      Both trunk and 2.0.x branch segfaults when trying to run traffic_logcat or traffic_logstats:

      (gdb) bt
      #0 0x00000000006ef566 in ink_hash_table_lookup_entry (ht_ptr=0x0, key=0x709b58 "proxy.config.stack_dump_enabled") at ink_hash_table.cc:249
      #1 0x00000000006ef4aa in ink_hash_table_lookup (ht_ptr=0x0, key=0x709b58 "proxy.config.stack_dump_enabled", value_ptr=0x7fffffffe160) at ink_hash_table.cc:190
      #2 0x00000000006db02a in RecGetRecord_Xmalloc (name=0x709b58 "proxy.config.stack_dump_enabled", data_type=RECD_INT, data=0x7fffffffe1a0, lock=true) at RecCore.cc:915
      #3 0x00000000006da333 in RecGetRecordInt (name=0x709b58 "proxy.config.stack_dump_enabled", rec_int=0x7fffffffe248, lock=true) at RecCore.cc:454
      #4 0x00000000004f95ad in init_signals () at signals.cc:469
      #5 0x00000000004cdb5a in init_system () at ./logging/LogStandalone.cc:125
      #6 0x00000000004ce2d2 in init_log_standalone_basic (pgm_name=0x7034d8 "traffic_logcat") at ./logging/LogStandalone.cc:329
      #7 0x00000000004cebf6 in main (argc=1, argv=0x7fffffffe468) at logcat.cc:271

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: