TS-272: logcat and logstats segfaults. This fix moves the Records dependencies out of signals.cc and into Main.cc.

git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/trunk@926907 13f79535-47bb-0310-9956-ffa450edef68